--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,18 @@
     <groupId>com.test</groupId>
     <artifactId>BuildArtifact</artifactId>
     <version>1.0</version>
+   
+    <properties>
+      <maven.compiler.source>1.7</maven.compiler.source>
+      <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
 
-   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <dependencies>
+     <dependency>
+       <groupId>junit</groupId>
+       <artifactId>junit</artifactId>
+       <version>4.12</version>
+       <scope>test</scope>
+     </dependency>
+    </dependencies>
 </project>
