--- a/home-task/pom.xml
+++ b/home-task/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>MavenBuild</groupId>
+    <groupId>com.test</groupId>
     <artifactId>BuildArtifact</artifactId>
     <version>1.0</version>
    
