--- a/home-task/build.gradle
+++ b/home-task/build.gradle
@@ -14,11 +14,15 @@ task fatJar(type: Jar) {
                 'Main-Class': 'com.test.Project'
     }
     baseName = 'BuildGradle'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
+
 }
 
 //Get dependencies from Maven central repository
 repositories {
     mavenCentral()
+}
+
+//Project dependencies
+dependencies {
+	compile 'ch.qos.logback:logback-classic:1.1.2'
 }
