--- a/home-task/build.gradle
+++ b/home-task/build.gradle
@@ -7,9 +7,9 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 //create a single Jar with all dependencies
-task fatJar(type: Jar) {
+task GradleTask('jar') {
 	manifest {
-        attributes 'Implementation-Title': 'Gradle Jar File Example',
+        attributes 'Implementation-Title': project.name,
                 'Implementation-Version': version,
                 'Main-Class': 'com.test.Project'
     }
@@ -22,7 +22,4 @@ repositories {
     mavenCentral()
 }
 
-//Project dependencies
-dependencies {
-	compile 'ch.qos.logback:logback-classic:1.1.2'
-}
+
