--- a/home-task/build.gradle
+++ b/home-task/build.gradle
@@ -26,5 +26,5 @@ repositories {
 
 //Project dependencies
 dependencies {
-	compile 'ch.qos.logback:logback-classic:1.1.2'
+	compile 'org.slf4j:slf4j-api:1.7.12'
 }
