--- a/home-task/build.gradle
+++ b/home-task/build.gradle
@@ -7,7 +7,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 //create a single Jar with all dependencies
-task build-custom(type: Jar) {
+task build_custom(type: Jar) {
 	manifest {
         attributes 'Implementation-Title': 'Gradle Jar File Example',
                 'Implementation-Version': version,
@@ -18,7 +18,7 @@ task build-custom(type: Jar) {
     with jar
 }
 
-task test-custom(type: Test, dependsOn: build-custom){
+task test_custom(type: Test, dependsOn: build_custom){
         useJUnit()
         testLogging {
         events "started", "passed", "skipped", "failed"
