--- a/home-task/build.gradle
+++ b/home-task/build.gradle
@@ -28,11 +28,12 @@ task test_custom(type: Test, dependsOn: build_custom){
 //Get dependencies from Maven central repository
 repositories {
     mavenCentral()
-
+    jcenter()
 }
 
 //Project dependencies
 dependencies {
       compile group: 'org.apache.logging.log4j', name: 'log4j-1.2-api', version: '2.4.1'
       implementation 'org.apache.commons:commons-collections4:4.0'
+      testImplementation "junit:junit:4.12"
 }
