--- a/home-task/build.gradle
+++ b/home-task/build.gradle
@@ -20,9 +20,12 @@ task build_custom(type: Jar) {
 
 task test_custom(type: Test, dependsOn: build_custom){
         useJUnit()
-        testLogging {
-        events "started", "passed", "skipped", "failed"
-     }
+        testLogging {events "passed","failed"}
+}
+
+
+task hello (type: JavaExec, dependsOn: test_custom) {
+        println("Hello is WORK")
 }
 
 //Get dependencies from Maven central repository
