--- a/helloworld-project/helloworld-ws/pom.xml
+++ b/helloworld-project/helloworld-ws/pom.xml
@@ -78,7 +78,11 @@
             <artifactId>jboss-servlet-api_3.1_spec</artifactId>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+           <groupId>javax.jws</groupId>
+           <artifactId>jsr181-api</artifactId>
+           <scope>probided</scope>
+        </dependency>
     </dependencies>
 
     <build>
