--- a/helloworld-project/helloworld-ws/pom.xml
+++ b/helloworld-project/helloworld-ws/pom.xml
@@ -83,6 +83,11 @@
            <artifactId>jsr181-api</artifactId>
            <scope>provided</scope>
         </dependency>
+        <dependency>
+           <groupId>org.jboss.spec.javax.xml.ws</groupId>
+           <artifactId>jboss-jaxws-api_2.3_spec</artifactId>
+           <scope>1.0.0.Final</scope>
+        </dependencies>
     </dependencies>
 
     <build>
