--- a/helloworld-project/helloworld-ws/pom.xml
+++ b/helloworld-project/helloworld-ws/pom.xml
@@ -87,7 +87,7 @@
            <groupId>org.jboss.spec.javax.xml.ws</groupId>
            <artifactId>jboss-jaxws-api_2.3_spec</artifactId>
            <scope>1.0.0.Final</scope>
-        </dependencies>
+        </dependency>
     </dependencies>
 
     <build>
