--- a/helloworld-project/helloworld-ws/pom.xml
+++ b/helloworld-project/helloworld-ws/pom.xml
@@ -79,15 +79,15 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-           <groupId>javax.jws</groupId>
-           <artifactId>jsr181-api</artifactId>
-           <scope>provided</scope>
+          <groupId>javax.jws</groupId>
+          <artifactId>jsr181-api</artifactId>
+          <scope>provided</scope>
         </dependency>
         <dependency>
-           <groupId>org.jboss.spec.javax.xml.ws</groupId>
-           <artifactId>jboss-jaxws-api_2.3_spec</artifactId>
-           <scope>1.0.0.Final</scope>
-        </dependency>
+          <groupId>org.jboss.spec.javax.xml.ws</groupId>
+          <artifactId>jboss-jaxws-api_2.3_spec</artifactId>
+          <version>1.0.0.Final</version>
+        </dependency> 
     </dependencies>
 
     <build>
