--- a/helloworld-project/helloworld-ws/pom.xml
+++ b/helloworld-project/helloworld-ws/pom.xml
@@ -79,16 +79,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-          <groupId>javax.jws</groupId>
-          <artifactId>jsr181-api</artifactId>
-          <scope>provided</scope>
+          <groupId>com.sun.xml.ws</groupId>
+          <artifactId>jaxws-ri</artifactId>
+          <version>2.3.2</version>
+          <type>pom</type>
         </dependency>
-        <dependency>
-          <groupId>org.jboss.spec.javax.xml.ws</groupId>
-          <artifactId>jboss-jaxws-api_2.3_spec</artifactId>
-          <version>1.0.0.Final</version>
-        </dependency> 
-    </dependencies>
 
     <build>
         <!-- Set the name of the WAR, used as the context root when the app is deployed -->
