--- a/helloworld-project/helloworld-ws/pom.xml
+++ b/helloworld-project/helloworld-ws/pom.xml
@@ -84,7 +84,7 @@
           <version>2.3.2</version>
           <type>pom</type>
         </dependency>
-
+    </dependencies>
     <build>
         <!-- Set the name of the WAR, used as the context root when the app is deployed -->
         <finalName>${project.artifactId}</finalName>
