--- a/helloworld-project/helloworld-ws/Dockerfile
+++ b/helloworld-project/helloworld-ws/Dockerfile
@@ -1,6 +1,3 @@
-FROM tomcat
+FROM daggerok/jboss-eap-7.1:7.1.61-alpine
 
-RUN apt-get update && apt-get -y upgrade
-
-WORKDIR /usr/local/tomcat
-COPY ./target/helloworld-ws.war /usr/local/tomcat/webapps/helloworld-ws.war
+COPY ./target/helloworld-ws.war ${JBOSS_HOME}/standalone/deployments/
