--- a/helloworld-project/helloworld-ws/Deploy.yml
+++ b/helloworld-project/helloworld-ws/Deploy.yml
@@ -18,7 +18,7 @@ spec:
         app: hello
     spec:
       imagePullSecrets:
-      - name: DockerToNexus
+      - name: DockerToNexus2
       containers:
       - name: hello-app
         image:  172.17.0.1:8082/helloworld-nprohorov:rc-32
