--- a/helloworld-project/helloworld-ws/Deploy.yml
+++ b/helloworld-project/helloworld-ws/Deploy.yml
@@ -1,40 +1,62 @@
 ---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: hello-world-app-ingress
+  namespace: nprohorov
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+  - host: hello.world.app
+    http:
+      paths:
+      - path: /*
+        pathType: Prefix
+        backend:
+          service:
+            name: hello-world-app-service
+            port:
+              number: 80
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-kuber
+  name: hello-world-app-deploy
+  namespace: nprohorov
   labels:
-    app: hello
+    app: hello-world
 spec:
   replicas: 1
   strategy:
     type: Recreate
   selector:
     matchLabels:
-      app: hello
+      app: hello-world
   template:
     metadata:
       labels:
-        app: hello
+        app: hello-world
     spec:
       imagePullSecrets:
-      - name: docker-registry
+      - name: docker-creds
       containers:
-      - name: hello-app
-        image:  172.17.0.1:8082/helloworld-nprohorov:rc-32
+      - name: hello-world-app
+        image: <IMAGE>
         ports:
-        - containerPort: 8090
+        - containerPort: 8080
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-service
+  name: hello-world-app-service
+  namespace: nprohorov
 spec:
   type: NodePort
   selector:
-    app: hello
+    app: hello-world
   ports:
     - port: 8080
-      targetPort: 8090
+      targetPort: 8080
       nodePort: 30100
